--- a/network-full-dive/network-full-dive.CSharp.csproj
+++ b/network-full-dive/network-full-dive.CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\PlayerLookingAt.cs" />
     <Compile Include="Assets\Scripts\FilterData.cs" />
     <Compile Include="Assets\Scripts\GameState.cs" />
     <Compile Include="Assets\Scripts\Menu.cs" />
