--- a/network-full-dive/network-full-dive.CSharp.csproj
+++ b/network-full-dive/network-full-dive.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.4.2f2</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -71,7 +73,7 @@
     <Compile Include="Assets\Scripts\PacketAttributes.cs" />
     <Compile Include="Assets\Scripts\PlayerLookingAt.cs" />
     <Compile Include="Assets\Scripts\PortInit.cs" />
-    <Compile Include="Assets\Scripts\ReadInPacketsComma.cs" />
+    <Compile Include="Assets\Scripts\ReadInPackets.cs" />
     <Compile Include="Assets\VRGUI\Scripts\VRGUI.cs" />
   </ItemGroup>
   <ItemGroup>
